--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -563,161 +563,166 @@ footer
         border: solid 2px
         border-color: #75E1C7
 
-      .cardleft
-        display: flex
-        flex-direction: column
-        flex-wrap: nowrap
-        align-items: center
-        .card-img
-          width: 12rem
-          height: 12rem
-          border: solid 2px
-          border-color: #75E1C7
-          border-radius: 1rem
-          background-color: #FFE4DC
-          p
-            width: 12rem
-            text-align: center
-            font-size: 1.5rem
-            color: #666666
-            line-height: 12rem
-        .date
-          font-size: 0.85rem
-          color: gray
-          margin-top: 1.5rem
-        .detail
-          font-size: 1.1rem
-          line-height: 1.3rem
-          width: 100%
-          max-height: 10rem
-          overflow: scroll
-          margin-top: 1rem
-          
-      
-      .cardright
-        position: relative
-        display: flex
-        flex-direction: column
-        flex-wrap: nowrap
-        justify-content: flex-start
-        align-items: flex-start
-        width: 20rem
-        height: 100%
-        //background-color: yellow
-        
-        .info
-          display: flex
-          flex-direction: row
-          flex-wrap: nowrap
-          justify-content: space-between
-          align-items: flex-start
-          width: 20rem
-          a
-            .cardinfott
-              font-size: 1.5rem
-              width: 11rem
-              //max-width: 15rem
-          .rate
-            font-size: 0.8rem
-            line-height: 1.2rem
-            //margin-left: 0.5rem
-            //background-color: #75E1C7
-            padding: 0 0.3rem
-            border-radius: 1rem
-            border: solid 2px
-            border-color: #75E1C7
-          .charname
-            font-size: 0.8rem
-            line-height: 1.2rem
-            //margin-left: 0.5rem
-            background-color: #75E1C7
-            padding: 0.2rem 0.3rem
-            border-radius: 1rem
-          
-        .comments
+        .cardleft
           display: flex
           flex-direction: column
           flex-wrap: nowrap
-          align-content: flex-start
+          align-items: center
+          max-width: 12rem
+          .card-img
+            width: 12rem
+            height: 12rem
+            border: solid 2px
+            border-color: #75E1C7
+            border-radius: 1rem
+            background-color: #FFE4DC
+            p
+              width: 12rem
+              text-align: center
+              font-size: 1.5rem
+              color: #666666
+              line-height: 12rem
+          #project-date
+            width: 6rem
+            .date
+              font-size: 0.85rem
+              color: gray
+              margin-top: 1.5rem
+          #project-detail
+            width: 100%
+            .detail
+              font-size: 1.1rem
+              line-height: 1.3rem
+              width: 100%
+              max-height: 10rem
+              overflow: scroll
+              margin-top: 1rem
+          
+      
+        .cardright
+          position: relative
+          display: flex
+          flex-direction: column
+          flex-wrap: nowrap
           justify-content: flex-start
           align-items: flex-start
-          //background-image: linear-gradient(#EEEEEE, #FFFFFF)
-          //border-radius: 1.5rem
-          width: 100%
-          //height: 12rem
-          overflow: scroll
-          overflow-x: hidden
-          //overflow-scrolling: touch
-          //-webkit-overflow-scrolling: touch
-          //appearance: none
+          width: 50rem
+          height: 100%
+
+          //background-color: yellow
           
-          .comment
+          .info
+            display: flex
+            flex-direction: row
+            flex-wrap: nowrap
+            justify-content: space-between
+            align-items: flex-start
+            width: 100%
+            a
+              .cardinfott
+                font-size: 1.5rem
+                width: 11rem
+                //max-width: 15rem
+            .rate
+              font-size: 0.8rem
+              line-height: 1.2rem
+              //margin-left: 0.5rem
+              //background-color: #75E1C7
+              padding: 0 0.3rem
+              border-radius: 1rem
+              border: solid 2px
+              border-color: #75E1C7
+            .charname
+              font-size: 0.8rem
+              line-height: 1.2rem
+              //margin-left: 0.5rem
+              background-color: #75E1C7
+              padding: 0.2rem 0.3rem
+              border-radius: 1rem
+            
+          .comments
+            display: flex
+            flex-direction: column
+            flex-wrap: nowrap
+            align-content: flex-start
+            justify-content: flex-start
+            align-items: flex-start
+            //background-image: linear-gradient(#EEEEEE, #FFFFFF)
+            //border-radius: 1.5rem
+            width: 100%
+            //height: 12rem
+            overflow: scroll
+            overflow-x: hidden
+            //overflow-scrolling: touch
+            //-webkit-overflow-scrolling: touch
+            //appearance: none
+            
+            .comment
+              display: flex
+              flex-direction: row;
+              flex-wrap: nowrap;
+              justify-content: flex-start;
+              align-content: flex-start;
+              align-items: center
+              width: 100%
+              
+              #participant-img
+                width: 2.5rem
+                height: 2.5rem
+                border-radius: 50%
+              .comment-right
+                position: relative
+                background-color: #EFFFFB
+                padding: 0 0.5rem 0.7rem 0.5rem
+                border-radius: 1rem
+                margin-top: 0.5rem
+                width: 100%
+                margin-left: 0.5rem
+                //background-color: white
+                
+                //#participant-name
+                a
+                  //position: absolute
+                  font-size: 1rem
+                  font-weight: 600
+                  text-align: left
+                  margin: -0.5v
+                .comments
+                  //background-color: blue
+                  font-size: 1rem
+                  text-align: left
+                #participant-rate
+                  //background-color: green
+                  font-size: 1rem
+                  text-align: right
+                  position: absolute
+                  right: 0.5rem
+                  top: 0.5rem
+                #participant-comment
+                  font-size: 1rem
+                  text-align: left
+                  width: 12rem
+                  margin: 0.1rem 1.2rem 0 1rem
+                  color: #333333
+          #eventcomment-insert
+            //position: absolute
+            //bottom: 0
             display: flex
             flex-direction: row;
-            flex-wrap: nowrap;
-            justify-content: flex-start;
-            align-content: flex-start;
-            align-items: center
+            justify-content: space-evenly
+            align-items: center;
             width: 100%
-            
-            #participant-img
-              width: 2.5rem
-              height: 2.5rem
-              border-radius: 50%
-            .comment-right
-              position: relative
-              background-color: #EFFFFB
-              padding: 0 0.5rem 0.7rem 0.5rem
-              border-radius: 1rem
-              margin-top: 0.5rem
-              width: 100%
-              margin-left: 0.5rem
-              //background-color: white
-              
-              //#participant-name
-              a
-                //position: absolute
-                font-size: 1rem
-                font-weight: 600
-                text-align: left
-                margin: -0.5v
-              .comments
-                //background-color: blue
-                font-size: 1rem
-                text-align: left
-              #participant-rate
-                //background-color: green
-                font-size: 1rem
-                text-align: right
-                position: absolute
-                right: 0.5rem
-                top: 0.5rem
-              #participant-comment
-                font-size: 1rem
-                text-align: left
-                width: 12rem
-                margin: 0.1rem 1.2rem 0 1rem
-                color: #333333
-        #eventcomment-insert
-          //position: absolute
-          //bottom: 0
-          display: flex
-          flex-direction: row;
-          justify-content: space-evenly
-          align-items: center;
-          width: 100%
-          input[type=text]
-            width: 65%
-          input[type=button]
-            width: 15%
+            input[type=text]
+              width: 65%
+            input[type=button]
+              width: 15%
 
       @media(max-width:1480px)
         .card
           flex-direction: column
           .cardleft
+            max-width: 100%
             flex-direction: row
-            .detail
-              height: 100%
           .cardright
             width: 100%
 
